# nutriments_reader_train

./: .gitignore  a.ipynb  pdm.python  pyproject.toml
data_download/: download_database.py  download_images_and_split_data.py  prepare_metadata_and_images_links.py
training/img_encoders_regression/: config.py  dataset.py  train.py
training/img_encoders_regression/architectures/: l_wrapper.py
training/img_encoders_regression/architectures/efficientnet_v2_s/: architecture.py
training/img_encoders_regression/architectures/resnet101/: architecture.py
training/img_encoders_regression/architectures/resnet50/: architecture.py
training/trocr/: config.py  dataset.py  train.py
